--- a/styles/architect1.css
+++ b/styles/architect1.css
@@ -24,6 +24,12 @@
     color: #727272;
 }
 
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+
 /* header styles */
 
 header {
@@ -37,11 +43,7 @@ nav {
     align-items: center;
 }
 
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 
 nav>ul {
     display: flex;
