added sponsors section with responsive

--- a/styles/architect1.css
+++ b/styles/architect1.css
@@ -147,6 +147,22 @@ main {
     margin-bottom: 10px;
 }
 
+/* sponsors styles start */
+.sponsors{
+    text-align: center;
+}
+
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content:space-evenly;
+    align-items:center;
+    gap: 20px;
+}
+
+.sponsors-img-container img{
+    width: 165px;
+}
 
 
 
@@ -161,7 +177,9 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container ,
+    .facts-card-container,
+    .sponsors-img-container{
         flex-direction: column;
     }
 
@@ -169,9 +187,12 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content {
+    .teams-content,.facts-card-container {
         padding-right: 20px;
         padding-left: 20px;
+    }
+    .facts-card-container{
+        gap: 20px;
     }
 
 }
@@ -184,7 +205,8 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 
